Revision history for File::DataClass

0.31.1    2014-01-13 18:34:25
          - Create extension_map stateful function
          - Improved test coverage
          - Created STORAGE_BASE constant
          - Refactored extension to storage class mapping
          - Fixed requiring Cwd in ::IO

0.30.1    2014-01-02 02:31:15
          - Skipped stale cache test on NTFS

0.29.1    2014-01-01 17:01:42
          - Fixed regex where clause matching
          - Fixed hash order bug in tests

0.28.1    2014-01-01 14:52:36
          - Define and use exception classes
          - Split out Storage::XML to own distribution
          - Made spell checking work with utf8
          - Simplified Build.PL. Updated test boilerplate
          - Uses DZ::P::AbstractFromPOD and LicenseFromModule
          - Dropped dependency on Class::Load

0.27.1    2013-11-22 09:40:23
          - Bumped Unexpected dependency to v0.15
          - ::IO::rel2abs stringifies the base arg
          - Updated git hooks

0.26.1    2013-09-26 17:02:33
          - Increased test coverage

0.25.1    2013-09-03 12:57:12
          - Bumped Unexpected version

0.24.3    2013-08-16 23:45:37
          - Updated toolchain
          - Converted to dist.ini. Dropped XML::DTD
