@@ -1,17 +1,17 @@
-# @(#)$Ident: Constants.pm 2014-01-12 21:24 pjf ;
+# @(#)$Ident: Constants.pm 2014-01-14 13:38 pjf ;
 
 package File::DataClass::Constants;
 
 use strict;
 use warnings;
-use version; our $VERSION = qv( sprintf '0.31.%d', q$Rev: 1 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.31.%d', q$Rev: 2 $ =~ /\d+/gmx );
 
 use Exporter 5.57           qw( import );
 use File::DataClass::Exception;
 
 our @EXPORT = qw( ARRAY CODE CYGWIN EVIL EXCEPTION_CLASS FALSE HASH
                   LANG LOCALIZE NO_UMASK_STACK NUL PERMS SPC
-                  STAT_FIELDS STORAGE_BASE TILDE TRUE );
+                  STAT_FIELDS STORAGE_BASE STORAGE_EXCEPTIONS TILDE TRUE );
 
 my $Exception_Class = 'File::DataClass::Exception';
 
@@ -29,11 +29,12 @@ sub SPC      () { ' '        }
 sub TILDE    () { '~'        }
 sub TRUE     () { 1          }
 
-sub EXCEPTION_CLASS () { __PACKAGE__->Exception_Class }
-sub NO_UMASK_STACK  () { -1 }
-sub STAT_FIELDS     () { qw( device inode mode nlink uid gid device_id
-                             size atime mtime ctime blksize blocks ) }
-sub STORAGE_BASE    () { 'File::DataClass::Storage' }
+sub EXCEPTION_CLASS    () { __PACKAGE__->Exception_Class }
+sub NO_UMASK_STACK     () { -1 }
+sub STAT_FIELDS        () { qw( device inode mode nlink uid gid device_id
+                                size atime mtime ctime blksize blocks ) }
+sub STORAGE_BASE       () { 'File::DataClass::Storage' }
+sub STORAGE_EXCEPTIONS () { 'WithLanguage' }
 
 sub Exception_Class {
    my ($self, $class) = @_; defined $class or return $Exception_Class;
@@ -56,7 +57,7 @@ File::DataClass::Constants - Definitions of constant values
 
 =head1 Version
 
-This document describes version v0.31.$Rev: 1 $
+This document describes version v0.31.$Rev: 2 $
 
 =head1 Synopsis
 
@@ -136,6 +137,13 @@ The list of fields returned by the core C<stat> function
 =head2 C<STORAGE_BASE>
 
 The prefix for storage classes
+
+=head2 C<STORAGE_EXCEPTIONS>
+
+Previous versions of L<File::DataClass> had some now incompatible
+storage subclasses that may still be installed.  Listing them here
+prevents them from inadvertently participating in the C<extension_map>
+registration process
 
 =head2 C<TILDE>
 
